// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`element registry snapshot of registry and defaults (guards against accidental layout changes) 1`] = `
Array [
  Array [
    "title",
    "Titel",
    "#d4e8f7",
    false,
  ],
  Array [
    "authorDate",
    "Autor & Datum",
    "#d4f0e8",
    false,
  ],
  Array [
    "metadata",
    "Kulinarik / Zeit / Infos",
    "#f0e8d4",
    false,
  ],
  Array [
    "ingredients",
    "Zutaten",
    "#e8d4f0",
    false,
  ],
  Array [
    "steps",
    "Zubereitungsschritte",
    "#f7d4d4",
    false,
  ],
  Array [
    "ingredientsHeading",
    "Überschrift Zutaten",
    "#c8b0e0",
    false,
  ],
  Array [
    "stepsHeading",
    "Überschrift Zubereitung",
    "#e8b0b0",
    false,
  ],
  Array [
    "photo1",
    "Foto 1",
    "#fdd8a0",
    true,
  ],
  Array [
    "photo2",
    "Foto 2",
    "#fdc880",
    true,
  ],
  Array [
    "photo3",
    "Foto 3",
    "#fdb860",
    true,
  ],
  Array [
    "photo4",
    "Foto 4",
    "#fd9840",
    true,
  ],
]
`;

exports[`element registry snapshot of registry and defaults (guards against accidental layout changes) 2`] = `
Array [
  Object {
    "h": 9.9,
    "id": "title",
    "visible": true,
    "w": 96,
    "x": 2,
    "y": 1.4,
  },
  Object {
    "h": 39.6,
    "id": "photo1",
    "visible": true,
    "w": 96,
    "x": 2,
    "y": 12.7,
  },
  Object {
    "h": 7.1,
    "id": "authorDate",
    "visible": true,
    "w": 96,
    "x": 2,
    "y": 53.7,
  },
  Object {
    "h": 11.3,
    "id": "metadata",
    "visible": true,
    "w": 96,
    "x": 2,
    "y": 62.2,
  },
  Object {
    "h": 56.6,
    "id": "ingredients",
    "visible": true,
    "w": 45,
    "x": 2,
    "y": 75,
  },
  Object {
    "h": 56.6,
    "id": "steps",
    "visible": true,
    "w": 47,
    "x": 51,
    "y": 75,
  },
  Object {
    "h": 7.1,
    "id": "ingredientsHeading",
    "visible": false,
    "w": 45,
    "x": 2,
    "y": 75,
  },
  Object {
    "h": 7.1,
    "id": "stepsHeading",
    "visible": false,
    "w": 47,
    "x": 51,
    "y": 75,
  },
  Object {
    "h": 39.6,
    "id": "photo2",
    "visible": false,
    "w": 45,
    "x": 2,
    "y": 12.7,
  },
  Object {
    "h": 39.6,
    "id": "photo3",
    "visible": false,
    "w": 45,
    "x": 51,
    "y": 12.7,
  },
  Object {
    "h": 19.8,
    "id": "photo4",
    "visible": false,
    "w": 45,
    "x": 51,
    "y": 53.7,
  },
]
`;

exports[`element registry snapshot of registry and defaults (guards against accidental layout changes) 3`] = `
Array [
  Object {
    "h": 7.1,
    "id": "title",
    "visible": true,
    "w": 96,
    "x": 2,
    "y": 0.7,
  },
  Object {
    "h": 56.6,
    "id": "photo1",
    "visible": true,
    "w": 45,
    "x": 2,
    "y": 8.5,
  },
  Object {
    "h": 4.9,
    "id": "authorDate",
    "visible": true,
    "w": 47,
    "x": 51,
    "y": 8.5,
  },
  Object {
    "h": 7.1,
    "id": "metadata",
    "visible": true,
    "w": 47,
    "x": 51,
    "y": 14.1,
  },
  Object {
    "h": 21.2,
    "id": "ingredients",
    "visible": true,
    "w": 47,
    "x": 51,
    "y": 21.9,
  },
  Object {
    "h": 21.2,
    "id": "steps",
    "visible": true,
    "w": 47,
    "x": 51,
    "y": 43.8,
  },
  Object {
    "h": 4.9,
    "id": "ingredientsHeading",
    "visible": false,
    "w": 47,
    "x": 51,
    "y": 21.9,
  },
  Object {
    "h": 4.9,
    "id": "stepsHeading",
    "visible": false,
    "w": 47,
    "x": 51,
    "y": 43.8,
  },
  Object {
    "h": 28.3,
    "id": "photo2",
    "visible": false,
    "w": 20,
    "x": 2,
    "y": 8.5,
  },
  Object {
    "h": 28.3,
    "id": "photo3",
    "visible": false,
    "w": 20,
    "x": 24,
    "y": 8.5,
  },
  Object {
    "h": 28.3,
    "id": "photo4",
    "visible": false,
    "w": 20,
    "x": 2,
    "y": 37.5,
  },
]
`;
